# python-devtools-boilerplate

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
src/: index.py  watch.py
src/welcome/: __init__.py  index.py
tests/: test_index.py
tests/welcome/: test_index.py
